--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
     <!-- jquery -->
     <script
-      src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
       type="text/javascript"
     ></script>
 
