working on profile page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li class="nav-item px-3">
               <a
                 class="nav-link hvr-underline-from-center"
-                href="./src/under_construction.html"
+                href="./src/profile.html"
                 >Profile</a
               >
             </li>
