--- a/src/profile.html
+++ b/src/profile.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="profile.css" />
 
     <!-- page icon -->
-    <link rel="icon" type="image/x-icon" href="/letter-l.svg" />
+    <link rel="icon" type="image/x-icon" href="/img/letter-l.svg" />
 
     <title>Leonard's Profile</title>
   </head>
@@ -43,17 +43,17 @@
               <a
                 class="nav-link hvr-underline-from-center"
                 aria-current="page"
-                href="#"
+                href="../index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item px-3">
-              <a class="nav-link active hvr-underline-from-center" href="#"
+              <a class="nav-link active hvr-underline-from-center" href="profile.html"
                 >Profile</a
               >
             </li>
             <li class="nav-item px-3">
-              <a class="nav-link hvr-underline-from-center" href="#"
+              <a class="nav-link hvr-underline-from-center" href="under_construction.html"
                 >Projects</a
               >
             </li>
@@ -65,20 +65,62 @@
 
     <!-- main -->
     <main>
-      <section class="container bio-card">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3">
-              <img src="../img/mypic.png" alt="" />
-            </div>
-            <div class="col">
-              <h1>Leonard Eikel Arapenta Tarigan</h1>
-            </div>
-          </div>
+      <div class="container">
+
+        <!-- header -->
+        <div class="row">
+          <section class="header">
+            <img src="/img/mypic.jpg" alt="" />
+            <h1>Leonard Eikel Arapenta Tarigan</h1>
+          <section/>
         </div>
-      </section>
-    </main>
-    <!-- end of main -->
+
+        <!-- about -->
+        <div class="row">
+          <section class="about">
+            <h2 class="fs-4">About Me</h2>
+            <p>I was born and raised in a city called Medan in Indonesia until I graduated from <a href="https://www.instagram.com/methodist2medan/" target="_blank">Methodist-2 Medan</a> highschool. Currently, I am majoring computer science at <a href="https://ub.ac.id/" target="_blank">University of Brawijaya</a>. It is located in Malang, Eastern Java. Filled with passion, I'm now learning front-end web development aside from my university studies because I want to be a front-end web developer. Reason behind it is because I love both programming and design. The fun fact is that since I was in my first year of highschool, I had always wanted to be an architect because I love drawing back then. But, during my final year in highschool, I fell in love with programming. That's why I decided to choose this major. Speaking about social, I have a little issue adapting to new people I just meet beacuse I tend to be comfortable to be alone. But that doesn't mean that I don't like interacting with people. I just need time to be able to do so.</p>
+          </section>
+        </div>
+
+        <!-- hobbies -->
+        <div class="row">
+          <section class="hobbies">
+            <h2 class="fs-4">Hobbies</h2>
+            
+            <div class="cards">
+              <div class="cards-item music">
+                Music
+              </div>
+
+              <div class="cards-item sports">
+                Sports
+              </div>
+
+              <div class="cards-item design">
+                Design
+              </div>
+
+              <div class="cards-item coding">
+                Coding
+              </div>
+
+              <div class="cards-item gaming">
+                Gaming
+              </div>
+
+            </div>
+          </section>
+        </div>
+
+        <!-- gears -->
+        <div class="gears">
+
+        </div>
+
+      </div>
+  </main>
+  <!-- end of main -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
