added typed js for home page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <section class="intro">
               <h1>
                 <span class="greeting fs-3">
-                  <span id="greeting">Hello World!</span> My name is
+                  <span class="hello"></span> My name is
                 </span>
                 <br />
                 <span class="name" id="name"> Leonard</span>
@@ -174,7 +174,8 @@
     </script>
 
     <!-- my script -->
-    <script src="./src/home.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script type="module" src="./src/home.js"></script>
 
     <!-- bootstrap script -->
     <script
