added languages logo

--- a/src/profile.html
+++ b/src/profile.html
@@ -19,6 +19,10 @@
     <!-- page icon -->
     <link rel="icon" type="image/x-icon" href="/img/letter-l.svg" />
 
+    <!-- devicon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+          
+
     <title>Leonard's Profile</title>
   </head>
 
@@ -79,7 +83,24 @@
         <div class="row">
           <section class="about">
             <h2 class="fs-4">About Me</h2>
-            <p>I was born and raised in a city called Medan in Indonesia until I graduated from <a href="https://www.instagram.com/methodist2medan/" target="_blank">Methodist-2 Medan</a> highschool. Currently, I am majoring computer science at <a href="https://ub.ac.id/" target="_blank">University of Brawijaya</a>. It is located in Malang, Eastern Java. Filled with passion, I'm now learning front-end web development aside from my university studies because I want to be a front-end web developer. Reason behind it is because I love both programming and design. The fun fact is that since I was in my first year of highschool, I had always wanted to be an architect because I love drawing back then. But, during my final year in highschool, I fell in love with programming. That's why I decided to choose this major. Speaking about social, I have a little issue adapting to new people I just meet beacuse I tend to be comfortable to be alone. But that doesn't mean that I don't like interacting with people. I just need time to be able to do so.</p>
+            <div class="col">
+              <p>I was born and raised in a city called Medan in Indonesia until I graduated from <a href="https://www.instagram.com/methodist2medan/" target="_blank">Methodist-2 Medan</a> highschool. Filled with passion, I'm now learning front-end web development aside from my university studies because I want to be a front-end developer. Reason behind it is because I love both programming and design and implementing design to be a real and usable product is just fun for me. One fun fact about me is that I had always wanted to be an architect since my first year in highschool. But, during my final year, I felt like web programming is my path. That brings me where I am now, majoring computer science at <a href="https://ub.ac.id/" target="_blank">University of Brawijaya</a>, located in Malang, Eastern Java. </p>
+            </div>
+
+            <div class="tech">
+              <div class="icon java">                              
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" />
+              </div>
+              <div class="icon js">                                             
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+              </div>
+              <div class="icon html">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+              </div>
+              <div class="icon css">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+              </div>
+            </div>
           </section>
         </div>
 
