--- a/src/profile.html
+++ b/src/profile.html
@@ -135,8 +135,10 @@
         </div>
 
         <!-- gears -->
-        <div class="gears">
-
+        <div class="row">
+          <section class="gears">
+            
+          </section>
         </div>
 
       </div>
