--- a/src/profile.html
+++ b/src/profile.html
@@ -75,7 +75,11 @@
         <div class="row">
           <section class="header">
             <img src="/img/mypic.jpg" alt="" />
-            <h1>Leonard Eikel Arapenta Tarigan</h1>
+            <div class="header-text">
+              <h1>Leonard Eikel Arapenta Tarigan</h1>
+              <p class="fs-5 header-desc" id="desc">Student</p>
+              <p class="underline">_________</p>
+            </div>
           <section/>
         </div>
 
@@ -144,11 +148,20 @@
       </div>
   </main>
   <!-- end of main -->
-
+  
+   <!-- jquery -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
+      src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
+      type="text/javascript"
     ></script>
+
+  <!-- my js -->
+  <script src="profile.js"></script>
+
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
