--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <li class="nav-item px-3">
               <a
                 class="nav-link hvr-underline-from-center"
-                href="./src/under_construction.html"
+                href="./src/projects.html"
                 >Projects</a
               >
             </li>
