--- a/src/profile.html
+++ b/src/profile.html
@@ -57,7 +57,7 @@
               >
             </li>
             <li class="nav-item px-3">
-              <a class="nav-link hvr-underline-from-center" href="under_construction.html"
+              <a class="nav-link hvr-underline-from-center" href="projects.html"
                 >Projects</a
               >
             </li>
