fixed mobile view for projects page

--- a/src/projects.html
+++ b/src/projects.html
@@ -72,18 +72,14 @@
     <main>
       <div class="container">
         <div class="row">
-          <a
-            href="https://leonardtarigan.github.io/BMI_Calculator/"
-            target="_blank"
-          >
-            <div class="col-md-4 box">
-              <div class="bg"></div>
-              <div class="text">
-                <h5>BMI Website</h5>
-                <p>Calculate your body mass index here</p>
-              </div>
+          <!-- item 1 -->
+          <div class="box">
+            <div class="bg"></div>
+            <div class="text">
+              <h5>BMI Calculator</h5>
+              <p>Calculate your body mass here</p>
             </div>
-          </a>
+          </div>
         </div>
       </div>
     </main>
