--- a/src/projects.html
+++ b/src/projects.html
@@ -73,13 +73,18 @@
       <div class="container">
         <div class="row">
           <!-- item 1 -->
-          <div class="box">
-            <div class="bg"></div>
-            <div class="text">
-              <h5>BMI Calculator</h5>
-              <p>Calculate your body mass here</p>
+          <a
+            href="https://leonardtarigan.github.io/BMI_Calculator/"
+            target="_blank"
+          >
+            <div class="box">
+              <div class="bg"></div>
+              <div class="text">
+                <h5>BMI Calculator</h5>
+                <p>Calculate your body mass here</p>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </main>
