added aos for language icons

--- a/src/projects.html
+++ b/src/projects.html
@@ -81,7 +81,7 @@
               <div class="bg"></div>
               <div class="text">
                 <h5>BMI Calculator</h5>
-                <p>Calculate your body mass here</p>
+                <p>Calculate your body mass index here</p>
               </div>
             </a>
           </div>
