--- a/src/profile.html
+++ b/src/profile.html
@@ -16,6 +16,9 @@
     <!-- my css -->
     <link rel="stylesheet" href="profile.css" />
 
+    <!-- aos css -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- page icon -->
     <link rel="icon" type="image/x-icon" href="/img/letter-l.svg" />
 
@@ -92,16 +95,16 @@
             </div>
 
             <div class="tech">
-              <div class="icon java">                              
+              <div class="icon java" data-aos="zoom-in">                              
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" />
               </div>
-              <div class="icon js">                                             
+              <div class="icon js" data-aos="zoom-in" data-aos-delay="100">                                             
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
               </div>
-              <div class="icon html">
+              <div class="icon html" data-aos="zoom-in" data-aos-delay="200">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
               </div>
-              <div class="icon css">
+              <div class="icon css" data-aos="zoom-in" data-aos-delay="300">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
               </div>
             </div>
@@ -157,6 +160,12 @@
 
   <!-- my js -->
   <script src="profile.js"></script>
+
+  <!-- aos -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
