changed projects link

--- a/src/projects.html
+++ b/src/projects.html
@@ -74,10 +74,7 @@
         <div class="row">
           <!-- item 1 -->
           <div class="box">
-            <a
-              href="https://leonardtarigan.github.io/BMI_Calculator/"
-              target="_blank"
-            >
+            <a href="https://your-bmi-calculator.netlify.app/" target="_blank">
               <div class="bg"></div>
               <div class="text">
                 <h5>BMI Calculator</h5>
