--- a/src/profile.html
+++ b/src/profile.html
@@ -77,7 +77,7 @@
         <!-- header -->
         <div class="row">
           <section class="header">
-            <img src="/img/mypic.jpg" alt="" />
+            <img src="../img/mypic.jpg" alt="" />
             <div class="header-text">
               <h1>Leonard Eikel Arapenta Tarigan</h1>
               <p class="fs-5 header-desc" id="desc">Student</p>
@@ -117,7 +117,7 @@
             <h2 class="fs-4">Hobbies</h2>
             
             <div class="cards">
-              <div class="cards-item music">
+              <div class="cards-item music" id="music">
                 Music
               </div>
 
@@ -139,6 +139,20 @@
 
             </div>
           </section>
+        </div>
+
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+
+          <!-- Modal content -->
+          <div class="modal-content">
+            <div class="close-btn">
+              <span class="close">&times;</span>
+            </div>
+            <h3 id="modalHead">Modal</h3>
+            <p class="modalDesc">Some text in the Modal..</p>
+          </div>
+
         </div>
 
         <!-- gears -->
