changed projects page link

--- a/src/profile.html
+++ b/src/profile.html
@@ -142,10 +142,10 @@
         </div>
 
         <!-- The Modal -->
-        <div id="myModal" class="modal">
+        <!-- <div id="myModal" class="modal"> -->
 
           <!-- Modal content -->
-          <div class="modal-content">
+          <!-- <div class="modal-content">
             <div class="close-btn">
               <span class="close">&times;</span>
             </div>
@@ -153,7 +153,7 @@
             <p class="modalDesc">Some text in the Modal..</p>
           </div>
 
-        </div>
+        </div> -->
 
         <!-- gears -->
         <div class="row">
