--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
     <!-- aos -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+      AOS.init({
+        once: true,
+      });
     </script>
 
     <!-- my script -->
