added new project

--- a/src/projects.html
+++ b/src/projects.html
@@ -71,17 +71,32 @@
     <!-- main -->
     <main>
       <div class="container">
-        <div class="row">
-          <!-- item 1 -->
-          <div class="box">
-            <a href="https://your-bmi-calculator.netlify.app/" target="_blank">
-              <div class="bg"></div>
-              <div class="text">
-                <h5>BMI Calculator</h5>
-                <p>Calculate your body mass index here</p>
-              </div>
-            </a>
-          </div>
+        <!-- item 1 -->
+        <div class="box">
+          <a href="https://your-bmi-calculator.netlify.app/" target="_blank">
+            <div class="pic">
+              <img src="/img/bmi.jpg" alt="" />
+            </div>
+            <div class="text">
+              <h5>BMI Calculator</h5>
+              <p>Calculate your body mass index here</p>
+            </div>
+          </a>
+        </div>
+        <!-- item 2 -->
+        <div class="box">
+          <a
+            href="https://leonardtarigan.github.io/weather_app/"
+            target="_blank"
+          >
+            <div class="pic">
+              <img src="/img/weather-app.jpg" alt="" />
+            </div>
+            <div class="text">
+              <h5>Weather App</h5>
+              <p>Find current weather around the world</p>
+            </div>
+          </a>
         </div>
       </div>
     </main>
