added seekr for project

--- a/src/projects.html
+++ b/src/projects.html
@@ -98,6 +98,18 @@
             </div>
           </a>
         </div>
+        <!-- item 3 -->
+        <div class="box">
+          <a href="https://seekrco.netlify.app/" target="_blank">
+            <div class="pic">
+              <img src="/img/seekr.jpg" alt="" />
+            </div>
+            <div class="text">
+              <h5>Seekr</h5>
+              <p>Job portal webapp using React.js</p>
+            </div>
+          </a>
+        </div>
       </div>
     </main>
     <!-- end of main -->
